--- a/src/pages/tiny/normalize.scss
+++ b/src/pages/tiny/normalize.scss
@@ -1,3 +1,12 @@
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+body {
+  margin: 0;
+}
+
 .tiny-box {
   main {
     display: block;
