feat: compatible with key
Be compatible with the key {Enter} when submitting.

Close #14

Add the button and alter the colour for Tiny.

Close #13

--- a/src/pages/tiny/tiny.scss
+++ b/src/pages/tiny/tiny.scss
@@ -115,5 +115,10 @@ $TinyBoxSize: 16px;
       justify-items: center;
       font-size: pxToEm(14);
     }
+
+    a {
+      text-decoration: underline;
+      color: #111111;
+    }
   }
 }
